major refactor, bug fixes, comments, license, and added experimental results